# mahouka-CPAL-addon

firefox-addonn-wasm/: ref.txt
firefox-addonn-wasm/mahouka-mayumi-project/: manifest.json  mayumi.js  opt_script.js  option.html  ref.txt  styles.css
firefox-addonn-wasm/wasm_project/: Cargo.toml  ref.txt
firefox-addonn-wasm/wasm_project/src/: lib.rs
mac-gui-tool/: Cargo.toml
