[package]
authors = ["JoungDongsub"]
name = "wasm_project_webaudio_addon"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = { path = "../../" }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

[lib]
crate-type = ["cdylib"]

[dependencies.web-sys]
features = [
  'AudioContext',
  'AudioDestinationNode',
  'AudioNode',
  'AudioParam',
  'GainNode',
  'OscillatorNode',
  'OscillatorType',
  "Storage", 
  "Promise",
]
path = "../../crates/web-sys"
